# starfall-python-demo

./: .gitignore  Makefile  Readme.md  openapi.yaml  pyproject.toml  tables.sql
starfall/: cli.py  database.py  models.py  server.py
starfall/handlers/: base.py  widget.py
