[tool.poetry]
name = "starfall"
version = "0.1.0"
description = ""
authors = ["Zanson Watt"]

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "^0.17.0"
humanize = "^3.11.0"
httpx = "^0.18.2"
parsy = "^1.3.0"
tornado = "^6.1"
click = "^8.0.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
starfall = 'starfall.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
